--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' wss://*.liveblocks.io https://*.liveblocks.io https://api.dicebear.com;"
+          "value": "default-src * 'unsafe-inline' 'unsafe-eval' data: blob:; connect-src *;"
         }
       ]
     }
