feat: implement real-time canvas sync with Yjs

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@liveblocks/client": "^3.13.3",
     "@liveblocks/react": "^3.13.3",
     "@liveblocks/yjs": "^3.13.3",
+    "@tldraw/sync": "^4.3.1",
     "lucide-react": "0.303.0",
     "nanoid": "5.0.4",
     "react": "18.2.0",
