feat: integrate OpenRouter AI with Gemini 2.5 Flash for note generation

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@
 # 获取地址: https://liveblocks.io/dashboard
 VITE_LIVEBLOCKS_PUBLIC_KEY=pk_dev_your_key_here
 
-# Gemini API (可选，用于 AI 功能)
+# OpenRouter API (用于 AI 功能)
+# 获取地址: https://openrouter.ai/keys
+VITE_OPENROUTER_API_KEY=sk-or-v1-your_key_here
+
+# Gemini API (可选，备用)
 # 获取地址: https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=
